--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                  </li>
               </ul>
             </aside>
-           <form class="conract__form">
+           <form action="https://formspree.io/f/xnqwwkdp" method="post" class="conract__form">
               <div class="form__name">
                  <input autocomplete="off" type="text" name="firstName" placeholder="First Name" required>
                  <input autocomplete="off" type="text" name="lastName" placeholder="Last Name" required >
