--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                  <input autocomplete="off" type="text" name="lastName" placeholder="Last Name" required >
               </div>
               <input  autocomplete="off" type="email" name="email" placeholder="Email Address" required>
-              <textarea  autocomplete="off" name="message" rows="7" placeholder="Message" required></textarea>
+              <textarea  autocomplete="off" name="message" placeholder="Message" required></textarea>
               <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
         </div>
