--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
       <link rel="stylesheet" href="./css/contact.css" />
    </head>
    <body>
+      <!-- fixed to top -->
+      <button type="button" id="btnToTop" class="btn__top"><i class="uil uil-angle-double-up"></i></button>
       <nav>
          <div class="container nav__container">
             <a href="./index.html"><h4>Logo</h4></a>
