--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
          href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
          rel="stylesheet"
       />
+      <!-- pattern CDN -->
+      <link href="https://unpkg.com/pattern.css" rel="stylesheet">
       <!-- custom css file -->
       <link rel="stylesheet" href="./css/style.css" />
    </head>
    <body>
+      <!-- fixed to top -->
+      <button type="button" id="btnToTop" class="btn__top"><i class="uil uil-angle-double-up"></i></button>
       <nav>
          <div class="container nav__container">
             <a href="./index.html"><h4>Logo</h4></a>
