--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Swiper CDN -->
       <link
          rel="stylesheet"
-         href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+         href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.4/swiper-bundle.css"
       />
       <!-- google fonts (montserrat) -->
       <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,13 +25,15 @@
          rel="stylesheet"
       />
       <!-- pattern CDN -->
-      <link href="https://unpkg.com/pattern.css" rel="stylesheet">
+      <link href="https://unpkg.com/pattern.css" rel="stylesheet" />
       <!-- custom css file -->
       <link rel="stylesheet" href="./css/style.css" />
    </head>
    <body>
       <!-- fixed to top -->
-      <button type="button" id="btnToTop" class="btn__top"><i class="uil uil-angle-double-up"></i></button>
+      <button type="button" id="btnToTop" class="btn__top">
+         <i class="uil uil-angle-double-up"></i>
+      </button>
       <nav>
          <div class="container nav__container">
             <a href="./index.html"><h4>Logo</h4></a>
@@ -498,7 +500,7 @@
          </div>
       </footer>
       <!-- Swiper Js CDN -->
-      <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.4/swiper-bundle.min.js"></script>
       <!-- custom Js file -->
       <script type="module" src="./js/main.js"></script>
    </body>
